welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:6: error: ')' expected but ';' found.
if (estSUrBiscuit();){
                   ^RunFour:6: error: illegal start of statement
if (estSUrBiscuit();){
                    ^